--- a/Relazione.tex
+++ b/Relazione.tex
@@ -257,7 +257,7 @@ Diagrammi Bode:
 \end{figure}
 
 \subsubsection{Note}
-Abbiamo riscontrato un elevato livello di rumore con le misure prese ad una frequenza di 1MHz (vedere imagine sotto), già a 300KHz si riscontravano alcuni disturbi.
+Abbiamo riscontrato un elevato livello di rumore con le misure prese ad una frequenza di 1MHz, già a 300KHz si riscontravano alcuni disturbi.
 
 \subsection{Confronto valori teorici e valori ottenuti dalle misure}
 I valori misurati non si discostano molto dai valori teorici calcolati. Soprattutto si può vedere che tutte le misure risultino compatibili con quelle teoriche. Solo quella alla frequenza di 1MHz risulta non compatibile, molto probabilmente a causa dell'elevato disturbo riscontrato in fase di misura del segnale di ingresso e segnale di uscita.
@@ -304,6 +304,5 @@ Come si denota dall'immagine, la fase del segnale di uscita è ritardata di 180 
   \caption{Inversione di fase}
   \label{fig:invfase1}
 \end{figure}
-\section{Strumenti utilizzati}
 
 \end{document}
